--- a/_lectures/L1/1.2.embedded-software-fundamentals.md
+++ b/_lectures/L1/1.2.embedded-software-fundamentals.md
@@ -1,7 +1,7 @@
 ---
 type: lecture
 date: Mon Sep 19 13:19:09 CAT 2022
-title: Introduction to electrical signal?
+title: Embedded Software fundamentals?
 tldr: "You will learn the compilation process and how to turn 0s into 1s."
 thumbnail: 
 links: 
