--- a/_lectures/L1/1.4.io-programming.md
+++ b/_lectures/L1/1.4.io-programming.md
@@ -1,7 +1,7 @@
 ---
 type: lecture
 date: Mon Sep 19 13:19:50 CAT 2022
-title: Introduction to electrical signal?
+title: AVR I/O Programming
 tldr: "You learn how to program the input/output (I/O) port of of an AVR MCU"
 thumbnail: 
 links: 
