--- a/_lectures/L2/2.1.bit-twiddling.md
+++ b/_lectures/L2/2.1.bit-twiddling.md
@@ -9,6 +9,8 @@ links:
       name: slides
     - url: /static_files/lectures/handouts/L1/1.4.io-programming.pdf
       name: handouts
+    - url: /static_files/lectures/handouts/L1/1.4.io-programming.pdf
+      name: code
 ---
 **Suggested Readings:**
 
