add bit twiddling lecture

--- a/_lectures/L2/2.1.bit-twiddling.md
+++ b/_lectures/L2/2.1.bit-twiddling.md
@@ -9,7 +9,7 @@ links:
       name: slides
     - url: /static_files/lectures/handouts/L1/1.4.io-programming.pdf
       name: handouts
-    - url: /static_files/lectures/handouts/L1/1.4.io-programming.pdf
+    - url: /static_files/code/Cycle.zip
       name: code
 ---
 **Suggested Readings:**
