--- a/_lectures/L3/3.1.avr-timers-overview.md
+++ b/_lectures/L3/3.1.avr-timers-overview.md
@@ -9,11 +9,12 @@ links:
       name: slides
     - url: /static_files/lectures/handouts/L3/3.1.avr-timers-overview.pdf
       name: handouts
-    - url: /
-      name: code
+    - url: /static_files/readings/Newbie’s Guide to AVR Timers.pdf
+      name: notes
 ---
-**Suggested Readings:**
+**Required reading:**
+ 
+-[Newbie’s Guide to AVR Timers](http://fabacademy.org/archives/2015/eu/students/gunnarsson.thorarinn_b.b/docs/d7/Timers.pdf)
 
-- <a href="{{ base }}/static_files/readings/Newbie’s Guide to AVR Timers.pdf">Newbie’s Guide to AVR Timers</a>
 
 
