--- a/_lectures/L1/1.4.io-programming.md
+++ b/_lectures/L1/1.4.io-programming.md
@@ -16,5 +16,6 @@ links:
 - [How to Get Code Onto a Microcontroller](https://www.sparkfun.com/tutorials/93) 
 - [AVR Tutorial - Getting Started: Blinking an LED](https://www.micahcarrick.com/getting-started.html) 
 - [GNU make manual](https://www.gnu.org/software/make/manual/make.html)
+- [C and AVR Programming](https://ccrma.stanford.edu/wiki/AVR_Programming)
 
 
