--- a/_lectures/L4/4.1.Intro-to-avr-interrupts.md
+++ b/_lectures/L4/4.1.Intro-to-avr-interrupts.md
@@ -1,20 +1,20 @@
 ---
 type: lecture
-date: Mon Oct 10 12:20:48 CAT 2022
-title: Overview of AVR timers
-tldr: "Introduction to the AVR timers"
+date: Mon Oct 24 13:40:54 CAT 2022
+title: Introduction to AVR interrupts
+tldr: "Intro to AVR interrupts and why they're useful in embedded systems"
 thumbnail: 
 links: 
-    - url: /static_files/lectures/slides/L3/3.1.avr-timers-overview.pdf
+    - url: /static_files/lectures/slides/L4/4.1.Intro-to-avr-interrupts.pdf
       name: slides
-    - url: /static_files/lectures/handouts/L3/3.1.avr-timers-overview.pdf
+    - url: /static_files/lectures/handouts/L4/4.1.Intro-to-avr-interrupts.pdf
       name: handouts
-    - url: /static_files/readings/Newbie’s Guide to AVR Timers.pdf
+    - url: /static_files/readings/Interrupts.pdf
       name: notes
 ---
 **Required reading:**
  
--[Newbie’s Guide to AVR Timers](http://fabacademy.org/archives/2015/eu/students/gunnarsson.thorarinn_b.b/docs/d7/Timers.pdf)
+-[Newbie’s Guide to AVR Interrupts](http://www.github.com/abcminiuser/avr-tutorials/blob/master/Interrupts/Output/Interrupts.pdf?raw=true)
 
 
 
