--- a/_lectures/L4/4.0.8-and-16-bit-avr-timers.md
+++ b/_lectures/L4/4.0.8-and-16-bit-avr-timers.md
@@ -4,7 +4,15 @@ date: Mon Oct 24 13:34:52 CAT 2022
 title: AVR timer programming
 tldr: "How to programm AVR timers and creating asynchronous delays"
 thumbnail: 
-
+links: 
+    - url: /static_files/lectures/slides/L4/4.1.avr-timers-programming
+      name: slides
+    - url: /static_files/lectures/handouts/L4/4.1.avr-timers-programming
+      name: handouts
+    - url: /
+      name: notes
+    - url: /
+      name: code
 ---
 
 **Required reading:**
