--- a/_lectures/L4/4.0.8-and-16-bit-avr-timers.md
+++ b/_lectures/L4/4.0.8-and-16-bit-avr-timers.md
@@ -11,7 +11,7 @@ links:
       name: handouts
     - url: /
       name: notes
-    - url: /
+    - url: /static_files/readings/Newbie’s Guide to AVR Timers.pdf
       name: code
 ---
 
