--- a/_lectures/L6/5.1-intro-to-rt-systems.md
+++ b/_lectures/L6/5.1-intro-to-rt-systems.md
@@ -1,18 +1,14 @@
 ---
 type: lecture
-date: Mon Nov 28 08:14:18 CAT 2022
-title: Fundamentals of real-time systems
-tldr: "This lecture provides an overview of the nature of real-time systems: definitions, CPU utilization, deadlines and challenges"
+date: Mon Nov 28 08:29:22 CAT 2022
+title: Low power design for embedded system
+tldr: "This lecture examines the challenges faced by battery powered embedded systems, and then explores methods to reduce power consumption"
 thumbnail: 
 links: 
-    - url: /static_files/lectures/slides/L5/5.1-intro-to-rt-systems.pdf
+    - url: /static_files/lectures/slides/L6/6.1 Low power embedded system design.pptx
       name: slides
-    - url: /static_files/lectures/handouts/L5/5.1-intro-to-rt-systems.pdf
-      name: handouts
- 
----
 ---
 **Suggested Readings:**
-- [Introduction to Real Time](https://www.embedded.com/introduction-to-real-time/)
-- Chap 1, Ovaska, L. P. A. J. (2012). Real-Time Systems Design and Analysis: Tools for the Practitioner by Phillip A Laplante (4th Edition). Wiley-IEEE Press
-- [Nondeterministic algorithm](https://en.wikipedia.org/wiki/Nondeterministic_algorithm)
+- [10 Tips for Ultra Low Power Embedded Design](https://starfishmedical.com/blog/10-tips-for-ultra-low-power-embedded-design/)
+- [Low-Power Design](https://www.embedded.com/low-power-design-2/)
+- [Introduction to Low-Power Embedded Design](https://www.allaboutcircuits.com/technical-articles/introduction-to-low-power-embedded-design/)
