--- a/_lectures/L6/6.1-low-power-design.md
+++ b/_lectures/L6/6.1-low-power-design.md
@@ -9,6 +9,8 @@ links:
       name: slides
 ---
 **Suggested Readings:**
+- [10 Most important tips for low power embedded system design](https://pallavaggarwal.in/10-tips-for-low-power-embedded-system-design/)
 - [10 Tips for Ultra Low Power Embedded Design](https://starfishmedical.com/blog/10-tips-for-ultra-low-power-embedded-design/)
 - [Low-Power Design](https://www.embedded.com/low-power-design-2/)
 - [Introduction to Low-Power Embedded Design](https://www.allaboutcircuits.com/technical-articles/introduction-to-low-power-embedded-design/)
+
