--- a/_lectures/L7/7.0.Embedded System Design Process.md
+++ b/_lectures/L7/7.0.Embedded System Design Process.md
@@ -1,7 +1,7 @@
 ---
 type: lecture
 date: Mon Nov 28 08:45:22 CAT 2022
-title: Low power design for embedded system
+title: Embedded system design process
 tldr: "Learn what embedded systems design is, understand the embedded systems design cycle and identify top challenges in embedded system design"
 thumbnail: 
 links: 
